--- a/FMBGApp/src/main/webapp/app/home/home.component.html
+++ b/FMBGApp/src/main/webapp/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-3">
-    <span class="hipster img-fluid rounded"></span>
+    <!-- removed hipster img-fluid rounded -->
   </div>
 
   <div class="col-md-9">
