--- a/FMBGApp/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/FMBGApp/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -1,8 +1,7 @@
 <nav data-cy="navbar" class="navbar navbar-dark navbar-expand-md bg-primary">
   <a class="navbar-brand logo" routerLink="/" (click)="collapseNavbar()">
     <span class="logo-img"></span>
-    <span jhiTranslate="global.title" class="navbar-title">FMBGApp</span>
-    <span class="navbar-version">{{ version }}</span>
+    <span jhiTranslate="global.title" class="navbar-title">Find Me a Board Game!</span>
   </a>
   <a
     class="navbar-toggler d-lg-none"
