added about component and about button to page-produces page does not exist error page

--- a/FMBGApp/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/FMBGApp/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -24,6 +24,11 @@
             <span jhiTranslate="global.menu.home">Home</span>
           </span>
         </a>
+        <a class="nav-link" routerLink="/about" (click)="collapseNavbar()">
+          <span>
+            <span jhiTranslate="global.menu.about">About</span>
+          </span>
+        </a>
       </li>
       <!-- jhipster-needle-add-element-to-menu - JHipster will add new menu items here -->
       <li
