--- a/angular-fmbg/src/app/app.component.html
+++ b/angular-fmbg/src/app/app.component.html
@@ -1,3 +1,12 @@
+<!-- Navigation -->
+<nav class="navbar navbar-expand navbar-dark bg-dark">
+  <div class="navbar-nav">
+    <a class="nav-item nav-link" routerLink="/">Home</a>
+    <a class="nav-item nav-link" routerLink="/about">About</a>
+    <a class="nav-item nav-Link" routerLink="/finder">Finder</a>
+  </div>
+</nav>
+
 <div class="container">
   <app-header></app-header>
 </div>
