--- a/angular-fmbg/src/app/components/header/header.component.html
+++ b/angular-fmbg/src/app/components/header/header.component.html
@@ -2,4 +2,7 @@
     <h1>{{ title }}</h1>
 </header>
 
-<app-button color="green" text="FIND ME A BOARD GAME!"></app-button>
+<app-button
+    text="FIND ME A BOARD GAME!" 
+    (btnClick)="toggleFinderTask()">
+</app-button>
