--- a/angular-fmbg/src/app/components/header/header.component.html
+++ b/angular-fmbg/src/app/components/header/header.component.html
@@ -7,8 +7,8 @@
     <span><h1>{{ title }}</h1></span>
     <span class="spacer"></span>
     <span class="header-buttons">
-        <button mat-raised-button color="primary" class="hover-button" routerLink="/">Home</button> &nbsp;
-        <button mat-raised-button color="primary" class="hover-button" routerLink="/about">About</button> &nbsp;
-        <button mat-raised-button color="primary" class="hover-button" routerLink="/finder">Finder</button>
+        <button mat-flat-button color="primary" class="hover-button" routerLink="/">Home</button> &nbsp;
+        <button mat-flat-button color="primary" class="hover-button" routerLink="/about">About</button> &nbsp;
+        <button mat-flat-button color="primary" class="hover-button" routerLink="/finder">Finder</button>
     </span>
 </mat-toolbar>
