--- a/angular-fmbg/src/app/components/header/header.component.html
+++ b/angular-fmbg/src/app/components/header/header.component.html
@@ -5,7 +5,7 @@
 
 <!-- Navigation -->
 <mat-toolbar color="primary">
-    <img src="https://www.pngrepo.com/png/10144/180/strategy.png"/> &nbsp;
+    <mat-icon>tips_and_updates</mat-icon>&nbsp;
     <h1>{{ title }}</h1>
     <span class="spacer"></span>
     <span class="header-buttons">
