removed button component, updated daily log

--- a/angular-fmbg/src/app/components/home/home.component.html
+++ b/angular-fmbg/src/app/components/home/home.component.html
@@ -1,1 +1,1 @@
-<app-button text="FIND ME A BOARD GAME!" (btnClick)="toggleFinderTask()"></app-button>
+<button mat-flat-button (btnClick)="toggleFinderTask()">FIND ME A BOARD GAME!</button>
