running into issues from too much file movement, need to work from clean project

--- a/src/main/angular-fmbg/src/app/components/home/home.component.html
+++ b/src/main/angular-fmbg/src/app/components/home/home.component.html
@@ -1,1 +1,1 @@
-<button mat-flat-button (btnClick)="toggleFinderTask()">FIND ME A BOARD GAME!</button>
+<button mat-flat-button (click)="findgames()">FIND ME A BOARD GAME!</button>
