moved find games button to finder component

--- a/src/main/angular-fmbg/src/app/components/finder/finder.component.html
+++ b/src/main/angular-fmbg/src/app/components/finder/finder.component.html
@@ -1,1 +1,4 @@
-<p>finder works!</p>
+<button mat-flat-button (click)="findgames()">Find Games</button>
+<div *ngFor="let boardgames of boardgames">
+    {{boardgames.thumb_url}}
+</div>
