--- a/src/main/angular-fmbg/src/app/components/home/home.component.html
+++ b/src/main/angular-fmbg/src/app/components/home/home.component.html
@@ -1,4 +1,1 @@
-<button mat-flat-button (click)="findgames()">FIND ME A BOARD GAME!</button>
-<div *ngFor="let boardgames of boardgames">
-    {{boardgames.thumb_url}}
-</div>
+<button>FIND ME A BOARD GAME!</button>
