--- a/src/main/angular-fmbg/src/styles.css
+++ b/src/main/angular-fmbg/src/styles.css
@@ -7,3 +7,5 @@ body { margin: 0;
     font-family: 'Lato', sans-serif;
     font-size: 14px; 
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
