--- a/src/main/angular-fmbg/src/app/components/finder/finder.component.css
+++ b/src/main/angular-fmbg/src/app/components/finder/finder.component.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lato&family=Nunito:wght@500&display=swap');
+
 img {
     border: 1px solid #ddd;
     border-radius: 4px;
@@ -5,3 +7,42 @@ img {
     width: 150px;
     height: 150px;
   }
+  
+h4 {
+  text-align: center;
+  padding: 10px;
+  
+}
+
+button {
+  display: inline-block;
+  border-radius: 8px;
+  background-color: #E91E63;
+  border: 1px;
+  color: #fff;
+  text-align: center;
+  font-size: 20px;
+  padding: 10px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  font-family: 'Lato', sans-serif;
+  position: absolute;
+  margin: auto;
+}
+
+button:hover {
+  background-color: #FFC107;
+  padding-right: 25px;
+}
+
+.bg-card {
+  max-width: 800px;
+  max-height: 250px;
+  overflow: auto;
+  margin-bottom: 8px;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: 'Lato', sans-serif;
+  font-size: 14px;
+}
