--- a/src/main/angular-fmbg/src/app/components/finder/finder.component.html
+++ b/src/main/angular-fmbg/src/app/components/finder/finder.component.html
@@ -18,8 +18,7 @@
   </mat-tab-group>
 <!-- </section> -->
 
-<button (click)="findgames()">GO →
-</button>
+<div><button (click)="findgames()">GO →</button></div>
 <div *ngFor="let boardgames of boardgames">
 <mat-card class="bg-card">
     <mat-card-title-group>
