many style changes: added animated button to home page, updated navbar bg color, added footer color

--- a/src/main/angular-fmbg/src/app/components/home/home.component.html
+++ b/src/main/angular-fmbg/src/app/components/home/home.component.html
@@ -1,3 +1,7 @@
-<div>
-<button>FIND ME A BOARD GAME!</button>
+<div class="big-button">
+  <div class="vertically-centered">
+    <div class="button-slide slide-right">
+      FIND ME A BOARD GAME!
+    </div>
+  </div>
 </div>
