--- a/src/main/angular-fmbg/src/app/components/header/header.component.css
+++ b/src/main/angular-fmbg/src/app/components/header/header.component.css
@@ -1,10 +1,21 @@
 mat-toolbar {
     height: 100%;
+    background-color: #283593;
+}
+
+mat-icon {
+  color: white;
+}
+
+button {
+  background-color: #283593;
+  color: white;
 }
 
 h1 {
     font-family: 'Righteous', cursive;
-    font-size: 28px;
+    font-size: 20px;
+    color: white;
 }
 
 img {
