--- a/src/main/angular-fmbg/src/app/components/home/home.component.html
+++ b/src/main/angular-fmbg/src/app/components/home/home.component.html
@@ -1,7 +1,10 @@
 <div class="big-button">
   <div class="vertically-centered">
-    <div class="button-slide slide-right">
-      FIND ME A BOARD GAME!
-    </div>
+      <button (click)="goToFinder()">FIND ME A BOARD GAME!</button>
   </div>
+</div>
+
+<div class="home">
+    Hello and welcome! Click on the big button above to find a board game for your next get together. <br>
+    Here's how it works...
 </div>
