--- a/src/main/angular-fmbg/src/styles.css
+++ b/src/main/angular-fmbg/src/styles.css
@@ -8,8 +8,7 @@ body {
     margin: 0;
     font-family: 'Lato', sans-serif;
     font-size: 14px;
-    background: rgb(40,53,147);
-    background: linear-gradient(to bottom, rgba(0,0,0,0) 90%, rgba(40,53,147,1) 0%);
+    background: linear-gradient(90deg, #1CB5E0 0%, #000851 100%);
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
