--- a/src/main/angular-fmbg/src/app/components/home/home.component.css
+++ b/src/main/angular-fmbg/src/app/components/home/home.component.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lato&family=Nunito:wght@500&family=Righteous&family=Roboto:ital,wght@1,500&display=swap');
+
 .bodybg-color {
   background-color: white;
 }
@@ -25,6 +27,8 @@
   font-style: inherit;
   border: 1px solid #323232;
   border-radius: 8px;
+  color: #4d4d4d;
+  background-color: #efd5ff;
   max-width: 50%;
   padding: 5px;
   margin-left: auto;
@@ -32,21 +36,23 @@
 }
 
 button {
-  color: #E91E63;
-  background-color: white;
-  border: 2px solid #E91E63;
-  border-radius: 0;
+  color: #323232;
+  background-color: #eeeeee;
+  border: 0;
+  border-radius: 8px;
   padding: 18px 36px;
   display: inline-block;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
   font-size: 18px;
   letter-spacing: 1px;
   cursor: pointer;
-  box-shadow: inset 0 0 0 0 #E91E63;
-  -webkit-transition: ease-out 0.5s;
+  box-shadow: inset 0 0 0 1px #515ada;
+  -webkit-transition: ease-out 0.6s;
+  -webkit-backface-visibility: hidden;
 }
 
 button:hover {
   color: #ffffff;
-  box-shadow: inset 400px 0 0 0 #E91E63;
+  box-shadow: inset 400px 0 0 1px #ff9aae; /* 1px fixes flickering */
 }
