home page instructions

--- a/src/main/angular-fmbg/src/app/components/home/home.component.html
+++ b/src/main/angular-fmbg/src/app/components/home/home.component.html
@@ -1,10 +1,32 @@
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
+</style>
+
 <div class="big-button">
   <div class="vertically-centered">
       <button (click)="goToFinder()">FIND ME A BOARD GAME!</button>
   </div>
 </div>
 
-<div class="home">
-    Hello and welcome! Click on the big button above to find a board game for your next get together. <br>
-    Here's how it works...
+<div class="home-wrapper">
+  <div class="home">
+    <div class="text-bg">
+      <div class="description">
+        <br>
+        WELCOME!
+        <br>
+        <br>
+        Here's how this works...
+        <br>
+        <li> Click that nice big button up there <i>(just do it)</i> </li>
+        <li> A pop-up form will appear <i>(wowzers)</i></li>
+        <li> Pick from a variety of filters including categories, number of players, and age.</li>
+        <li> Hit the submit button and the nifty finder will spit out a list of games. </li>
+        <br>
+        And that's it! You'll become the star of your next get-together. :)
+        <br>
+        <br>
+      </div>
+    </div>
+  </div>
 </div>
