--- a/src/main/angular-fmbg/src/app/components/home/home.component.css
+++ b/src/main/angular-fmbg/src/app/components/home/home.component.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lato&family=Nunito:wght@500&family=Righteous&family=Roboto:ital,wght@1,500&display=swap');
-
 .bodybg-color {
   background-color: white;
 }
@@ -14,23 +12,49 @@
   margin: 0;
   position: absolute;
   top: 30%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
+}
+
+
+.home-wrapper {
+  display: flex;
+  justify-content: center;
 }
 
 .home {
-  display: flex;
-  justify-content: center;
-  margin-top: 15%;
-  position: center;
-  font-family: Roboto, sans-serif;
-  font-style: inherit;
-  border: 1px solid #323232;
-  border-radius: 8px;
-  color: #4d4d4d;
-  background-color: #efd5ff;
-  max-width: 50%;
-  padding: 5px;
+  margin: 0;
+  position: absolute;
+  top: 45%;
+  width: 600px;
+  padding: 8px;
+
+  --b:2px;
+  --c:white;
+  --w:10px;
+
+  border:var(--b) solid transparent;
+  --g:#0000 90deg,var(--c) 0;
+  background:
+    conic-gradient(from 90deg  at top    var(--b) left  var(--b),var(--g)) 0    0,
+    conic-gradient(from 180deg at top    var(--b) right var(--b),var(--g)) 100% 0,
+    conic-gradient(from 0deg   at bottom var(--b) left  var(--b),var(--g)) 0    100%,
+    conic-gradient(from -90deg at bottom var(--b) right var(--b),var(--g)) 100% 100%;
+  background-size:var(--w) var(--w);
+  background-origin:border-box;
+  background-repeat:no-repeat;
+}
+
+.text-bg {
+  background-color: #ffffff;
+  opacity: 0.7;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.description {
+  font-family: 'Roboto Slab', serif;
+  font-size: 14px;
+  color: black;
+  max-width: 95%;
   margin-left: auto;
   margin-right: auto;
 }
