--- a/src/main/angular-fmbg/src/app/components/header/header.component.html
+++ b/src/main/angular-fmbg/src/app/components/header/header.component.html
@@ -5,7 +5,7 @@
 
 <!-- Navigation -->
 <mat-toolbar>
-    <h1>{{ title }}</h1>
+    <a routerLink="/">{{ title }}</a>
     <span class="spacer"></span>
     <span class="header-buttons">
         <button mat-flat-button routerLink="/">HOME</button> &nbsp;
