--- a/src/main/angular-fmbg/src/app/components/home/home.component.html
+++ b/src/main/angular-fmbg/src/app/components/home/home.component.html
@@ -4,7 +4,7 @@
 
 <div class="big-button">
   <div class="vertically-centered">
-      <button (click)="goToFinder()">FIND ME A BOARD GAME!</button>
+      <button class="homebtn" (click)="goToFinder()">FIND ME A BOARD GAME!</button>
   </div>
 </div>
 
